--- a/_config.yml
+++ b/_config.yml
@@ -6,24 +6,24 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 徐代龙的技术专栏
-brief-intro: Android and Python Coder
+title: 陶斯展的技术专栏
+brief-intro: Java and Python Coder
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://643435675.github.io" # the base hostname & protocol for your site
+url: "https://harrytsz.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
 twitter_username: #gaohaoyang126
 facebook_username: #gaohaoyang.water
-github_username:  643435675
-email: 643435675@QQ.com
-weibo_username: 3115521wh
-zhihu_username: hll643435675
-linkedIn_username: gaohaoyang
+github_username:  harrytsz
+email: 18810271846@163.com
+weibo_username: harrytsz
+zhihu_username: harrytsz
+linkedIn_username: harrytsz
 dribbble_username:
 
-description_footer: 来自徐代龙的个人专栏！
+description_footer: 来自陶斯展的个人专栏！
 
 # comments
 # two ways to comment, only choose one, and use your own short name
@@ -43,7 +43,7 @@ markdown: kramdown
 
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
+  syntax_highlighter: pygments
 
 # port
 # port: 1234
@@ -58,5 +58,5 @@ excerpt_separator: "\n\n\n\n"
 # paginate
 plugins: [jekyll-paginate]
 paginate: 6
-port: 4001
+port: 4000
 theme: jekyll-theme-cayman
